--- a/src/sass/components/_filter.scss
+++ b/src/sass/components/_filter.scss
@@ -165,6 +165,7 @@
 
   &__memory {
     label {
+      display: block;
       position: relative;
       padding: 12px 15px;
       cursor: pointer;
@@ -178,6 +179,14 @@
     input:checked+label {
       color: #ffffff;
       background: #2C0952;
+    }
+  }
+
+  &__btn-see-all {
+    transition: color .15s;
+
+    &:hover {
+      color: #FF548C;
     }
   }
 }
