--- a/src/sass/components/_frame.scss
+++ b/src/sass/components/_frame.scss
@@ -1,6 +1,7 @@
 .frame {
   box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
+  overflow: hidden;
 
   @include screen(xl) {
     border-radius: 0;
