--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -18,6 +18,7 @@ a {
 }
 
 button {
+  padding: 0;
   border: none;
   background-color: transparent;
 }
@@ -38,6 +39,25 @@ button {
     width: 100vw;
     z-index: -1;
     background-color: rgb(248, 248, 248);
+  }
+}
+
+.bg-full-width--white {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    display: block !important;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    height: 100%;
+    width: 100vw;
+    z-index: -1;
+    background-color: #ffffff;
   }
 }
 
