--- a/src/sass/layout/_article.scss
+++ b/src/sass/layout/_article.scss
@@ -1,11 +1,10 @@
 .article {
-  .header {
-    margin-bottom: 15px;
-  }
-
   &__wrapper {
+    padding-top: 20px;
+
     @include screen(xl) {
       padding: 0;
+      padding-top: 20px;
     }
   }
 
