--- a/src/sass/layout/_articles.scss
+++ b/src/sass/layout/_articles.scss
@@ -22,8 +22,11 @@
   }
 
   &__wrapper {
+    padding-top: 20px;
+
     @include screen(xl) {
       padding: 0;
+      padding-top: 20px;
     }
   }
 
