--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -5,6 +5,10 @@
       border-top: 1px solid #E7E7E7;
     }
 
+    @include screen(l) {
+      padding-top: 20px;
+    }
+
     &-top {
       background: #FFFFFF;
 
@@ -130,7 +134,7 @@
 
       a {
         display: block;
-        padding: 10px 15px;
+        padding: 10px;
         width: max-content;
         font: 500 16px/20px Roboto;
         color: #30373D;
