--- a/src/sass/layout/_delivery.scss
+++ b/src/sass/layout/_delivery.scss
@@ -1,7 +1,10 @@
 .delivery {
   &__wrapper {
+    padding-top: 20px;
+
     @include screen(xl) {
       padding: 0;
+      padding-top: 20px;
     }
   }
 
