--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -104,15 +104,22 @@
   }
 
   &__logo {
+    @include screen(xl) {
+      padding-top: 5px;
+      margin-right: 30px;
+    }
 
-    @include screen(l) {
-      margin-right: 60px;
+    img {
+      @include screen(xl) {
+        width: 111px;
+      }
     }
   }
 
   &__navigation {
     @include screen(l) {
-      margin-right: 50px;
+      /* margin-right: 50px; */
+      margin: 0 40px;
     }
 
     a {
@@ -132,6 +139,10 @@
     white-space: nowrap;
 
     span {
+      @include screen(xl) {
+        display: none;
+      }
+
       color: rgba(51, 51, 51, .5);
 
       &:first-child {
@@ -161,6 +172,12 @@
       }
     }
 
+    &>div {
+      @include screen(xl) {
+        display: none;
+      }
+    }
+
     a {
       position: relative;
       /* padding-left: 19px; */
@@ -175,18 +192,13 @@
       &:hover svg {
         transform: scale(1.3);
       }
+    }
 
-      /* &::before {
-        position: absolute;
-        content: "";
-        top: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        width: 14px;
-        height: 14px;
-        background: url("../img/pic/ico/phone-ico.svg") no-repeat;
-      } */
+    &-mobile {
+      @include screen(xl) {
+        padding-top: 5px;
+        margin-right: 20px;
+      }
     }
   }
 
@@ -195,27 +207,17 @@
 
     &-bg {
       position: relative;
-
-      &::before {
-        content: "";
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, .7);
-        z-index: 49;
-        transition: opacity .15;
-        opacity: 0;
-        pointer-events: none;
-      }
-
-      &--dark {
-        &::before {
-          opacity: 1;
-          pointer-events: inherit;
-        }
-      }
+      content: "";
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, .7);
+      z-index: 49;
+      transition: opacity .15;
+      opacity: 0;
+      pointer-events: none;
     }
 
     &-btn {
@@ -238,21 +240,29 @@
         margin: 0 15px 2px 0;
       }
 
-      &.uk-open+div+.header__catalog-bg::before {
+      &.uk-open+div+.header__catalog-bg {
         opacity: 1;
+        pointer-events: inherit;
+        z-index: 49;
       }
     }
 
     &-container {
       position: absolute;
       top: -20px !important;
-      left: -15px !important;
+      left: -10px !important;
       padding: 90px 0 0;
       width: 1250px;
       border-radius: 20px;
       z-index: 50;
       background: #F8F8F8;
       overflow: hidden;
+    }
+
+    @media (min-width: 1250px) {
+      .uk-grid>* {
+        padding-left: 17px;
+      }
     }
 
     &-close {
@@ -323,7 +333,7 @@
 
     &-list {
       a {
-        padding: 10px 25px;
+        padding: 10px;
         text-align: center;
         border-radius: 20px;
         transition: box-shadow .15s;
@@ -359,44 +369,88 @@
   }
 
   &__bottom {
+    @include screen(xl) {
+      padding: 15px 0 15px 5px;
+      border-bottom: 1px solid rgba(234, 234, 234, .8);
+      background: rgb(248, 248, 248);
+    }
+
     @include screen(l) {
       margin-top: 25px;
+    }
+
+    /* swiper */
+    &-container {
+      @include screen(xl) {
+        overflow: hidden;
+      }
+
+      @include screen(l) {
+        max-width: 960px;
+        z-index: 5;
+      }
     }
 
     .header__list {
       &>li {
         position: relative;
 
+        @include screen(xl) {
+          display: flex;
+          width: auto;
+          min-height: 100px;
+          max-height: 100px;
+          margin-right: 10px;
+          padding: 10px;
+          box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
+          border-radius: 8px;
+          background: #FFFFFF;
+        }
+
+        @include screen(l) {
+          width: auto;
+        }
+
         &:not(:last-of-type) {
           &::after {
-            position: absolute;
-            content: "";
-            top: 0;
-            bottom: 0;
-            right: 0;
-            margin: auto;
-            width: 1px;
-            height: 50px;
-            background-color: rgba(0, 0, 0, .1);
+            @include screen(l) {
+              position: absolute;
+              content: "";
+              top: 0;
+              bottom: 0;
+              right: 0;
+              margin: auto;
+              width: 1px;
+              height: 50px;
+              background-color: rgba(0, 0, 0, .1);
+            }
           }
         }
 
         &::before {
-          content: "";
-          position: absolute;
-          bottom: -10px;
-          left: 0;
-          right: 0;
-          margin: auto;
-          width: 70%;
-          height: 6px;
-          border-radius: 100px 100px 0px 0px;
-          background: transparent;
-          transition: width .2s, background-color .2s;
-          will-change: width, background-color;
+          @include screen(l) {
+            content: "";
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 70%;
+            height: 6px;
+            border-radius: 100px 100px 0px 0px;
+            background: transparent;
+            transition: width .2s, background-color .2s;
+            will-change: width, background-color;
+          }
         }
 
         &:hover {
+          .header__sublist {
+            opacity: 1;
+            pointer-events: inherit;
+            z-index: 1000;
+          }
+
           &::before {
             background: #FF548C;
             width: 100%;
@@ -408,33 +462,71 @@
         }
 
         &>a {
-          padding: 0 35px;
-          white-space: nowrap;
-          font: 500 18px/23px FuturaPT;
           color: #30373D;
-          transition: color .15s;
+
+          @include screen(xl) {
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-around;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            font: 500 14px/16px FuturaPT;
+          }
+
+          @include screen(l) {
+            padding: 0 35px;
+            white-space: nowrap;
+            font: 500 18px/23px FuturaPT;
+            transition: color .15s;
+          }
         }
 
         img {
-          margin-right: 10px;
+          @include screen(l) {
+            margin-right: 10px;
+          }
         }
       }
     }
   }
 
   &__sublist {
-    position: absolute;
-    min-width: 0;
-    width: 100%;
-    padding: 0;
-    top: 48px !important;
-    border-radius: 0 0 20px 20px;
+    @include screen(xl) {
+      display: none;
+    }
+
+    @include screen(l) {
+      position: absolute;
+      min-width: 0;
+      width: 100%;
+      padding: 0;
+      top: 58px !important;
+      border-radius: 0 0 20px 20px;
+      opacity: 0;
+      pointer-events: none;
+      background-color: #ffffff;
+      transition: opacity .2s;
+    }
+
+    &::after {
+      @include screen(l) {
+        content: "";
+        position: absolute;
+        top: -20px;
+        height: 20px;
+        width: 100%;
+        background: transparent;
+      }
+    }
 
     a {
-      display: block;
-      padding: 10px 15px !important;
-      font: 500 16px/23px FuturaPT;
-      color: #30373D;
+      @include screen(l) {
+        display: block;
+        padding: 10px 15px !important;
+        font: 500 16px/23px FuturaPT;
+        color: #30373D;
+      }
 
       &:hover {
         color: #FF548C;
@@ -475,6 +567,40 @@
         font: 700 17px/23px Roboto;
         color: #30373D;
       }
+    }
+  }
+
+  &__sticky {
+    @include screen(l) {
+      padding-top: 5px;
+    }
+
+    &.uk-active {
+      @include screen(l) {
+        padding: 5px 0;
+        background: #ffffff;
+      }
+    }
+
+    &-mobile {
+      @include screen(xl) {
+        padding: 5px;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
+
+  &__menu {
+    &-button {
+      margin-right: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      border-radius: 8px;
+      box-shadow: 0px 2px 8px rgba(255, 84, 140, 0.4);
+      background: #FF548C;
     }
   }
 }
