--- a/src/sass/layout/_refferal.scss
+++ b/src/sass/layout/_refferal.scss
@@ -1,6 +1,9 @@
 .refferal {
   &__wrapper {
+    padding-top: 20px;
+
     @include screen(xl) {
+      padding-top: 20px;
       padding-left: 0;
       padding-right: 0;
     }
