--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,7 +3,8 @@
   /* select city, links and login */
   &__top {
     font: 500 16px/24px FuturaPT;
-    background-color: #E5E5E5;
+    background-color: rgb(248, 248, 248);
+    border-bottom: 1px solid #E9E9E9;
 
     &-select-city {
       span {
@@ -13,11 +14,12 @@
       a {
         position: relative;
         padding-right: 15px;
+        font: normal 14px/14px Roboto;
 
         &::after {
           position: absolute;
           content: '';
-          top: 10px;
+          top: 6px;
           right: 0;
           width: 8px;
           height: 8px;
