--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -236,6 +236,8 @@
 
       @include screen(l) {
         margin-right: 10px;
+        max-width: 205.38px;
+        max-height: 41px;
       }
 
       svg {
