feature: adds page producr-accessories

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -823,6 +823,9 @@
         <a href="product.html" style="color: #fff;">Продукт</a>
       </li>
       <li style="margin-bottom: 10px;">
+        <a href="product-accessories.html" style="color: #fff;">Продукт-Аксессуар</a>
+      </li>
+      <li style="margin-bottom: 10px;">
         <a href="refferal.html" style="color: #fff;">Рефералка</a>
       </li>
     </ul>
