--- a/src/sass/components/_filter.scss
+++ b/src/sass/components/_filter.scss
@@ -182,6 +182,25 @@
     }
   }
 
+  &__radio {
+    label {
+      display: block;
+      position: relative;
+      padding: 12px 15px;
+      cursor: pointer;
+      border-radius: 20px;
+      font: 500 16px/19px Roboto;
+      color: #333333;
+      background: transparent;
+      transition: color .15s, background-color .3s;
+    }
+
+    input:checked+label {
+      color: #ffffff;
+      background: #2C0952;
+    }
+  }
+
   &__btn-see-all {
     transition: color .15s;
 
