--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -7,7 +7,7 @@
       padding-right: 0;
     }
   }
- 
+
   .frame {
     @include screen(xl) {
       box-shadow: none;
@@ -160,12 +160,13 @@
     }
 
     @include screen(l) {
+      height: max-content;
       width: 410px;
       padding: 15px 20px 20px;
     }
 
     .product__container {
-      &:not(:last-of-type) {
+      &:not(.product__container--present) {
         margin-bottom: 20px;
         padding-bottom: 20px;
         border-bottom: 1px solid #EAEAEA;
@@ -177,6 +178,12 @@
       }
 
       &:last-of-type {
+        margin-bottom: 0;
+        padding-bottom: 0;
+        border-bottom: none;
+      }
+
+      &--present {
         @include screen(xl) {
           width: 100%;
         }
@@ -263,6 +270,21 @@
     }
 
     .filter__memory {
+      padding: 3px;
+      background: #FFFFFF;
+      border: 1px solid #E9E9E9;
+      border-radius: 10px;
+      text-align: center;
+
+      label {
+        display: block;
+        padding: 9px;
+        white-space: nowrap;
+        font: 500 12px/16px Roboto;
+      }
+    }
+
+    .filter__radio {
       padding: 3px;
       background: #FFFFFF;
       border: 1px solid #E9E9E9;
@@ -447,8 +469,10 @@
 
   &__gallery {
     @include screen(l) {
-      width: 100%;
-      height: 100%;
+      min-width: 430px;
+      min-height: 540px;
+      max-width: 100%;
+      max-height: 100%;
     }
 
     &-wrap {
@@ -552,8 +576,6 @@
       background-size: 10px;
     }
   }
-
-  /* ---------------------------------------------- */
 
   &__points {
     display: inline-block;
