feature: adds seo-block

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,6 +28,7 @@
 @import "components/rating";
 @import "components/fileuploader";
 @import "components/profile";
+@import "components/seo";
 
 @import "layout/header";
 @import "layout/main-features";
