--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -752,6 +752,19 @@
   </div>
 </div>
 
+<!-- Search -->
+<div id="popupSearch" class="popup popup--search" uk-modal>
+  <div class="uk-modal-dialog uk-modal-body">
+    <input id="#searchInputModal" class="uk-width-1-1" type="text" placeholder="Поиск" pattern=".{0}" value=""
+      autocomplete="off" />
+    <button class="search__clear" type="button">
+      <svg width="24" height="24">
+        <use xlink:href="img/symbol/sprite.svg#close" />
+      </svg>
+    </button>
+  </div>
+</div>
+
 <script defer src="js/library.min.js"></script>
 <script defer src="js/scripts.min.js"></script>
 
