--- a/src/components/header.html
+++ b/src/components/header.html
@@ -23,7 +23,8 @@
     </div>
   </div>
 
-  <div class="header__sticky-mobile uk-container uk-flex uk-flex-column@l uk-flex-row@s bg-full-width--white"
+  <div
+    class="header__sticky-mobile uk-container uk-flex uk-flex-between uk-flex-column@l uk-flex-row@s bg-full-width--white"
     uk-sticky="media: (max-width:1249px)">
 
     <div class="uk-flex uk-flex-middle uk-padding-small-top@l uk-padding-small-bottom@l">
@@ -228,13 +229,42 @@
       </div>
 
       <div class="search uk-width-expand@l">
-        <input class="uk-visible@l" type="text" placeholder="Поиск по каталогу">
+        <input id="searchInput" class="uk-visible@l" type="text" placeholder="Поиск по каталогу" pattern=".{0}" value=""
+          autocomplete="off">
 
-        <button class="search__mobile uk-hidden@l">
+        <div class="search__close-wrap uk-visible@l">
+          <button class="search__close" type="button">
+            <svg width="24" height="24">
+              <use xlink:href="img/symbol/sprite.svg#close" />
+            </svg>
+          </button>
+        </div>
+
+        <button class="search__mobile uk-hidden@l" uk-toggle="target: #popupSearch">
           <svg width="24" height="24" fill="#393939">
             <use xlink:href="img/symbol/sprite.svg#header__search-mobile" />
           </svg>
         </button>
+
+        <ul class="search__result">
+          <li>
+            <a href="#">iphone xr 256</a>
+          </li>
+          <li>
+            <a href="#">iphone xr 64</a>
+          </li>
+          <li>
+            <a href="#">iphone xr Dual SIM</a>
+          </li>
+          <li>
+            <a href="#">iphone xr 128</a>
+          </li>
+          <li>
+            <a href="#">iphone xr чехол</a>
+          </li>
+        </ul>
+
+        <div class="backdrop" uk-toggle="target: body; cls: search--opened"></div>
       </div>
 
       <a class="header__contacts-mobile uk-hidden@l" href="tel:84991131908">
