--- a/src/sass/components/_search.scss
+++ b/src/sass/components/_search.scss
@@ -9,19 +9,98 @@
 		margin-right: 10px;
 	}
 
+	&__close {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: -20px;
+		margin: auto;
+		width: 100px;
+		transition: opacity .3s;
+		z-index: 110;
+
+		svg {
+			vertical-align: middle;
+			width: 25px;
+			height: 25px;
+			fill: #FF548C;
+		}
+
+		&-wrap {
+			position: absolute;
+			right: 0;
+			top: 0;
+			bottom: 0;
+			margin: auto;
+			width: 50px;
+			overflow: hidden;
+		}
+	}
+
 	input {
-		padding: 11px 20px 12px;
+		padding: 10px 20px;
 		width: 100%;
 		border-radius: 8px;
-		border: none;
+		border: 1px solid transparent;
 		background: url("../img/pic/ico/search-ico.svg") no-repeat, #EFEFF0;
 		background-size: 18px 18px;
-		background-position: 98%;
+		background-position: 755px;
+
+		&:valid {
+
+			&~.search__close-wrap .search__close {
+				transform: translate(100px);
+				opacity: 0;
+				transition: opacity .3s, transform .4s;
+			}
+		}
+
+		&:invalid {
+			background-position: 1000px;
+
+			&~.search__close-wrap .search__close {
+				transform: translate(0px);
+				opacity: 1;
+				pointer-events: inherit;
+				transition: opacity .3s, transform .4s;
+			}
+		}
 	}
 
 	&__mobile {
 		@include screen(xl) {
 			margin-right: 25px;
+		}
+	}
+
+	&__result {
+		z-index: 100;
+		opacity: 0;
+		pointer-events: none;
+		position: absolute;
+		top: 44px;
+		width: 100%;
+		background: #FFFFFF;
+		border: 1px solid #E5E5E5;
+		box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+		border-radius: 8px;
+		overflow: hidden;
+		transition: opacity .3s;
+
+		a {
+			display: block;
+			padding: 17px 20px 15px;
+			color: #30373D;
+
+			&:not(:last-of-type) {
+				border-bottom: 1px solid #E6E6E6;
+				font: normal 16px/19px Roboto;
+			}
+
+			&:hover {
+				background: #2C0952;
+				color: rgba(255, 255, 255, .9);
+			}
 		}
 	}
 }
