--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -809,4 +809,59 @@
       }
     }
   }
+
+  &--search {
+    .uk-modal-body {
+      padding: 0;
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
+    .search__clear {
+      opacity: 0;
+      position: absolute;
+      right: 20px;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      height: 100%;
+      transition: opacity .3s;
+      pointer-events: none;
+      z-index: 350;
+
+      svg {
+        vertical-align: middle;
+        width: 25px;
+        height: 25px;
+        fill: #FF548C;
+      }
+    }
+
+    input {
+      padding: 12px 150px 12px 20px;
+      border: 1px solid #DDDDDD;
+      border-radius: 12px;
+      background: url('../img/pic/ico/search.svg') 20px center no-repeat, #ffffff;
+
+      &:valid {
+
+        &~.search__btn,
+        &~.search__clear {
+          transform: translate(100px);
+          opacity: 0;
+          transition: opacity .3s, transform .3s;
+        }
+      }
+
+      &:invalid {
+
+        &~.search__clear {
+          transform: translate(0px);
+          opacity: 1;
+          pointer-events: inherit;
+          transition: opacity .3s, transform .3s;
+        }
+      }
+    }
+  }
 }
