--- a/src/components/header.html
+++ b/src/components/header.html
@@ -29,11 +29,224 @@
 
     <div class="uk-flex uk-flex-middle uk-padding-small-top@l uk-padding-small-bottom@l">
       <div class="header__menu uk-hidden@l">
-        <button class="header__menu-button">
+        <button class="header__menu-button" data-uk-toggle="target: #menuMobile">
           <svg width="26" height="20" fill="#F9F9F9">
             <use xlink:href="img/symbol/sprite.svg#hamburger" />
           </svg>
         </button>
+
+        <nav class="menu uk-offcanvas uk-width-expand uk-hidden@l" id="menuMobile"
+          data-uk-offcanvas="overlay: true; mode: none;">
+          <div class="uk-offcanvas-bar">
+            <div class="menu__wrap">
+              <div>
+                <div class="menu__header uk-flex uk-flex-between uk-flex-middle uk-child-width-1-2">
+                  <button type="button">Вход</button>
+                  <button type="button">Регистрация</button>
+                </div>
+
+                <ul class="menu__tabs uk-flex uk-child-width-1-2" uk-switcher="swiping: false">
+                  <li><a href="#">Меню</a></li>
+                  <li><a href="#">Категории товаров</a></li>
+                </ul>
+
+                <ul class="uk-switcher uk-overflow-container">
+                  <li>
+                    <ul class="menu__list uk-flex uk-flex-wrap uk-child-width-1-2">
+                      <li><a href="#">Главная</a></li>
+                      <li><a href="#">Каталог</a></li>
+                      <li><a href="#">Гарантия</a></li>
+                      <li><a href="#">Доставка и оплата</a></li>
+                      <li><a href="#">Кредит</a></li>
+                      <li><a href="#">Новости</a></li>
+                      <li><a href="#">Отзывы</a></li>
+                      <li><a href="#">Контакты</a></li>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <ul class="menu__categories" uk-accordion>
+                      <li class="uk-open">
+                        <a class="uk-accordion-title" href="#">iPhone</a>
+                        <!-- Swiper -->
+                        <div class="uk-accordion-content swiper-products">
+                          <ul class="menu__categories-list uk-flex uk-flex-between swiper-wrapper">
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-1.jpg" alt="">
+                                </div>
+                                <span>iPhone 11 Pro Max</span>
+                              </a>
+                            </li class="swiper-slide">
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-1.jpg" alt="">
+                                </div>
+                                <span>iPhone 11 Pro</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-2.jpg" alt="">
+                                </div>
+                                <span>iPhone 11</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-3.jpg" alt="">
+                                </div>
+                                <span>iPhone XS Max</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-3.jpg" alt="">
+                                </div>
+                                <span>iPhone XS</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-4.jpg" alt="">
+                                </div>
+                                <span>iPhone XR</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-5.jpg" alt="">
+                                </div>
+                                <span>iPhone X</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-6.jpg" alt="">
+                                </div>
+                                <span>iPhone 8 Plus</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-6.jpg" alt="">
+                                </div>
+                                <span>iPhone 8</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-7.jpg" alt="">
+                                </div>
+                                <span>iPhone 7 Plus</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-7.jpg" alt="">
+                                </div>
+                                <span>iPhone 7</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-8.jpg" alt="">
+                                </div>
+                                <span>iPhone 6S Plus</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-8.jpg" alt="">
+                                </div>
+                                <span>iPhone 6S</span>
+                              </a>
+                            </li>
+                            <li class="swiper-slide">
+                              <a class="uk-flex uk-flex-column" href="#">
+                                <div>
+                                  <img src="img/pic/bg/header-catalog-9.jpg" alt="">
+                                </div>
+                                <span>iPhone SE</span>
+                              </a>
+                            </li>
+                          </ul>
+                        </div>
+                      </li>
+                      <li>
+                        <a class="uk-accordion-title" href="#">iPad</a>
+                        <div class="uk-accordion-content">
+                          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat. Duis aute irure dolor reprehenderit.</p>
+                        </div>
+                      </li>
+                      <li>
+                        <a class="uk-accordion-title" href="#">MacBook и iMac</a>
+                        <div class="uk-accordion-content">
+                          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                            nulla
+                            pariatur. Excepteur sint occaecat cupidatat proident.</p>
+                        </div>
+                      </li>
+                      <li>
+                        <a class="uk-accordion-title" href="#">Watch</a>
+                        <div class="uk-accordion-content">
+                          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                            nulla
+                            pariatur. Excepteur sint occaecat cupidatat proident.</p>
+                        </div>
+                      </li>
+                      <li>
+                        <a class="uk-accordion-title" href="#">Аксессуары</a>
+                        <div class="uk-accordion-content">
+                          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                            nulla
+                            pariatur. Excepteur sint occaecat cupidatat proident.</p>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="menu__footer uk-flex">
+                <a href="#" class="menu__select-city uk-flex uk-flex-column uk-width-expand">
+                  <span>Ваш город:</span>
+                  <span>Санкт-Петeрбург</span>
+                </a>
+                <ul class="menu__socials uk-flex uk-width-1-3 uk-child-width-1-2">
+                  <li>
+                    <a href="#">
+                      <svg width="25" height="14" fill="#447EB2">
+                        <use xlink:href="img/symbol/sprite.svg#vk-logo" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="18" height="18" fill="#F8355E">
+                        <use xlink:href="img/symbol/sprite.svg#insta-logo" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </nav>
       </div>
 
       <a href="#" class="header__logo">
@@ -125,7 +338,6 @@
                     <span>iPhone 11</span>
                   </a>
                 </li>
-
                 <li>
                   <a class="uk-flex uk-flex-column" href="#">
                     <div>
@@ -150,7 +362,6 @@
                     <span>iPhone XR</span>
                   </a>
                 </li>
-
                 <li>
                   <a class="uk-flex uk-flex-column" href="#">
                     <div>
@@ -217,7 +428,6 @@
                 </li>
               </ul>
             </li>
-
             <li>
               <h2 class="uk-text-center uk-margin-bottom">Обмен и возврат в
                 течении 14 дней <br>с момента покупки.</h2>
