--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -291,3 +291,43 @@ button {
     }
   }
 }
+
+.menu--opened {
+  .header__catalog-container {
+    display: block;
+  }
+
+  .main-banner .header__catalog-menu {
+    display: none;
+  }
+
+  .backdrop {
+    display: block;
+    /*  background: rgba(255, 255, 255, .3); */
+    backdrop-filter: blur(5px);
+    /* filter: url('#blur');
+    filter: blur(5px); */
+
+    &::before {
+      content: '';
+      position: fixed;
+      opacity: 1;
+      width: 100%;
+      height: 100vh;
+      filter: url('#blur');
+      filter: blur(5px);
+    }
+  }
+
+  .header__catalog {
+    z-index: 300;
+  }
+
+  .header__catalog-btn {
+    position: relative;
+
+    &::before {
+      display: block;
+    }
+  }
+}
