--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,6 +29,7 @@
 @import "components/fileuploader";
 @import "components/profile";
 @import "components/seo";
+@import "components/menu";
 
 @import "layout/header";
 @import "layout/main-features";
