--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,4 @@
 .header {
-
   /* select city, links and login */
   &__top {
     font: 500 16px/24px FuturaPT;
@@ -607,7 +606,7 @@
       background: #FF548C;
     }
 
-    .uk-offcanvas {
+   /*  .uk-offcanvas {
       top: 61px;
     }
 
@@ -620,6 +619,6 @@
 
     .menu.uk-open>.uk-offcanvas-bar {
       transform: none !important;
-    }
+    } */
   }
 }
