--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -37,6 +37,7 @@
 
   &__settings {
     @include screen(xl) {
+      padding-bottom: 15px;
       background: #FFFFFF;
       border-bottom: 1px solid #E7E7E7;
       box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.05);
