feature: adds seo block msk

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,6 +29,7 @@
 @import "components/fileuploader";
 @import "components/profile";
 @import "components/seo";
+@import "components/seo-msk";
 @import "components/menu";
 
 @import "layout/header";
