feature: adds hover and popups for buttons

--- a/src/components/account-profile.html
+++ b/src/components/account-profile.html
@@ -1,7 +1,7 @@
 <div class="profile__wrap uk-width-1-3@l">
   <div class="uk-flex uk-flex-between uk-flex-middle uk-visible@l">
     <span class="profile__title">Профиль</span>
-    <button class="profile__edit" type="button">Изменить
+    <button class="profile__edit" type="button" data-uk-toggle="target: #popupEddit">Изменить
       профиль</button>
   </div>
   <ul class="profile" uk-accordion>
@@ -22,7 +22,7 @@
             <label class="profile__subtitle">Баланс</label>
             <span>5065 балов</span>
           </div>
-          <button type="button">Вывести в &#8381; на карту</button>
+          <button type="button" data-uk-toggle="target: #popupPay">Вывести в &#8381; на карту</button>
         </div>
 
         <ul class="profile__data">
