--- a/src/components/header.html
+++ b/src/components/header.html
@@ -36,8 +36,7 @@
         </button>
 
         <!-- Menu Mobile -->
-        <div id="menuMobile" class="menu popup uk-modal uk-modal-container"
-          data-uk-modal="container: false">
+        <div id="menuMobile" class="menu popup uk-modal uk-modal-container" data-uk-modal="container: false">
           <div class="popup__dialog uk-modal-dialog uk-modal-body">
             <div class="menu__wrap">
               <div>
@@ -895,7 +894,7 @@
 
       <div class="search uk-width-expand@l">
         <input id="searchInput" class="uk-visible@l" type="text" placeholder="Поиск по каталогу" pattern=".{0}" value=""
-          autocomplete="off">
+          autocomplete="new-password">
 
         <div class="search__close-wrap uk-visible@l">
           <button class="search__close" type="button">
