--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -31,6 +31,7 @@
 @import "components/seo";
 @import "components/seo-msk";
 @import "components/menu";
+@import "components/calc";
 
 @import "layout/header";
 @import "layout/main-features";
