--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -5,6 +5,14 @@
 		background: #6344B6;
 		box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
 		cursor: pointer;
+		transition: background-color .3s, box-shadow .3s;
+	}
+
+	&:hover {
+		@include screen(l) {
+			background: rgb(103, 60, 221);
+			box-shadow: 0px 4px 15px rgba(107, 72, 169, 0.7);
+		}
 	}
 
 	&::before {
