--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -343,6 +343,11 @@
       font: 600 14px/16px FuturaPT;
       background: #27CC00;
       box-shadow: 0px 3px 10px rgba(39, 204, 0, 0.35);
+
+      &:hover {
+        background: #5EF13B;
+        box-shadow: 0px 3px 20px rgba(67, 254, 22, 0.701841);
+      }
     }
   }
 }
