--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -179,6 +179,11 @@
       background: #FFFFFF;
       border: 1px solid #27CC00;
       color: #27CC00;
+
+      &:hover {
+        background: #ffffff;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, .2);
+      }
     }
 
     &--disabled {
