featuere menu header

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -964,14 +964,95 @@
           </a>
           <ul class="header__sublist">
             <li>
-              <a href="#">iPhone 11 Pro Max</a>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-1.jpg" alt="">
+                </div>
+                <span>iPhone 11 Pro Max</span>
+              </a>
             </li>
+
             <li>
-              <a href="#">iPhone 11 Pro</a>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-1.jpg" alt="">
+                </div>
+                <span>iPhone 11 Pro</span>
+              </a>
             </li>
+
             <li>
-              <a href="#">iPhone 11</a>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-1.jpg" alt="">
+                </div>
+                <span>iPhone 11 Pro Max</span>
+              </a>
             </li>
+
+            <li>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-2.jpg" alt="">
+                </div>
+                <span>iPhone 11</span>
+              </a>
+            </li>
+
+            <li>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-3.jpg" alt="">
+                </div>
+                <span>iPhone XS Max</span>
+              </a>
+            </li>
+
+            <li>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-3.jpg" alt="">
+                </div>
+                <span>iPhone XS</span>
+              </a>
+            </li>
+
+            <li>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-4.jpg" alt="">
+                </div>
+                <span>iPhone XR</span>
+              </a>
+            </li>
+
+            <li>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-5.jpg" alt="">
+                </div>
+                <span>iPhone X</span>
+              </a>
+            </li>
+
+            <li>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-6.jpg" alt="">
+                </div>
+                <span>iPhone 8 Plus</span>
+              </a>
+            </li>
+
+            <li>
+              <a class="uk-flex uk-flex-middle" href="#">
+                <div>
+                  <img src="img/temp/header-sublist-6.jpg" alt="">
+                </div>
+                <span>iPhone 8</span>
+              </a>
+            </li>
+
           </ul>
         </li>
 
