--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -509,13 +509,16 @@
     @include screen(l) {
       position: absolute;
       min-width: 0;
-      width: 100%;
-      padding: 0;
+      width: 320px;
+      max-height: 400px;
+      overflow-y: scroll;
+      padding: 10px 25px 10px 10px;
       top: 58px !important;
-      border-radius: 0 0 20px 20px;
+      border-radius: 15px;
+      border: 1px solid #EAEAEA;
       opacity: 0;
       pointer-events: none;
-      background-color: #ffffff;
+      background: #F8F8F8;
       transition: opacity .2s;
     }
 
@@ -532,14 +535,39 @@
 
     a {
       @include screen(l) {
-        display: block;
         padding: 10px 15px !important;
         font: 500 16px/23px FuturaPT;
         color: #30373D;
       }
 
       &:hover {
+        background: #FFFFFF;
+        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+        border-radius: 12px;
         color: #FF548C;
+
+        img {
+          transform: scale(1.2);
+        }
+      }
+
+      &>div {
+        @include screen(l) {
+          margin-right: 10px;
+          width: 50px;
+          height: 50px;
+          mix-blend-mode: darken;
+        }
+      }
+
+      img {
+        @include screen(l) {
+          margin: 0;
+          width: 100%;
+          height: auto;
+          mix-blend-mode: darken;
+          transition: transform .15s;
+        }
       }
     }
   }
